--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
             <li class="active"><a href="https://getbootstrap.com/docs/3.3/examples/theme/#">Home</a></li>
-            <li><a href="https://getbootstrap.com/docs/3.3/examples/theme/#about">About</a></li>
+            <li><a href="coder-kids.com">About</a></li>
             <li><a href="https://getbootstrap.com/docs/3.3/examples/theme/#contact">Contact</a></li>
             <li class="dropdown">
               <a href="https://getbootstrap.com/docs/3.3/examples/theme/#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
